2006-01-10  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/mathfp/s_frexp.c: Check for special values on
	the original input, not the manipulated output value.
	* libm/mathfp/sf_frexp.c: Ditto.
	* libm/mathfp/s_atangent.c: Don't use local value branch
	when checking for quadrant.
	* libm/mathfp/sf_atangent.c: Ditto.

2006-01-09  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/freopen.c: Switch to use isatty instead of _isatty.
	* libc/stdio64/freopen64.c: Ditto.

2006-01-09  Eric Blake  <ebb9@byu.net>

	* libc/stdio/freopen.c (_freopen_r): Accept NULL filename.
	* libc/stdio64/freopen64.c (_freopen64_r): Likewise.

2006-01-06  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/include/getopt.h: Add macros needed by
	new version of getopt.c in libc/stdlib.

2006-01-04  Gregory Pietsch  <gpietsch@comcast.net>

	* libc/stdlib/getopt.c: Replaced with version
	that adds getopt_long and getopt_long_only support.
	* libc/include/getopt.h: New file.

2005-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* NEWS: Update with 1.14.0 info.
	* README: Ditto.
	* acinclude.m4: Change version number to 1.14.0.
	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* doc/aclocal.m4: Ditto.
	* doc/configure: Ditto.
	* libc/*/aclocal.m4: Ditto.
	* libc/*/configure: Ditto.
	* libc/libc.texinfo: Ditto.
	* libm/*/aclocal.m4: Ditto.
	* libm/*/configure: Ditto.
	* libm/libm.texinfo: Ditto.
	* libc/sys/linux/shared.ld: Add VERS_1.14.

2005-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/sys/stat.h: Change *stat64 prototypes to
	take a pointer to struct stat64 rather than struct stat.

2005-12-16  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: Prefer long over int for int32_t.
	Use __have_long32 to set up int32_t.
	* libc/include/inttypes.h: Use "#if xxx" instead of "#ifdef xxx"
	(Sync with stdint.h).

2005-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/fcntl.h: Define O_SYNC unconditionally.  Fix
	typo in O_NDELAY comment.
